applications/expenses/expenses-server.yml
---
apiVersion: v1
kind: Service
metadata:
  name: expenses-server
spec:
  selector:
    app: expenses-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-server
  labels:
    app: expenses-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-server
  template:
    metadata:
      labels:
        app: expenses-server
    spec:
      containers:
        - name: expenses-server
          image: ghcr.io/smukherj1/expenses-v2@sha256:1b378fddef30122f0d50ac58e3add3f50d46b1bdd066ae03f0536c50e999ef36
          ports:
            - containerPort: 3000
